# batchwork-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: blume.config.ts  package.json
docs/agents/: domain.md
docs/agents/research/: python-cli-frameworks.md
docs/components/home/: Benefits.astro  ClosingCta.astro  CodePanel.astro  Expansion.astro  Footer.astro  Hero.astro  InstallCommand.astro  ProviderCoverage.astro  ProviderSwitch.astro  Stories.astro
docs/docs/: api.mdx  cli.mdx  configuration.mdx  examples.mdx  faq.mdx  index.mdx  installation.mdx
docs/docs/guides/: cli-exits.mdx  (+6 more)
docs/lib/: navigation.ts  providers.ts
docs/pages/: index.astro
docs/research/: skills-sh-packaging.md  uv-tool-packaging.md
docs/styles/: home.css
hackathon/: .env.example  README.md  demo_package.py  prompts.txt  pyproject.toml
skills/batchwork-ai/: SKILL.md
src/batchwork/: __init__.py  _anthropic_serialization.py  _base_url.py  _bounded_json.py  _compatible_media.py  _google_schema.py  _google_serialization.py  _limits.py  _network.py  _provider_failure.py  _read_retry.py  _serialization.py  _text_validation.py  _typing.py  body.py  client.py  errors.py  job.py  media.py  types.py
tests/: test_agent_skill.py  test_anthropic_history.py  test_base_url.py  test_body.py  test_client.py  test_google_continuation.py  test_job.py  test_media.py  test_provider_media_compatibility.py  test_read_retry.py  test_responses_history.py  test_types.py
tests/cli/: test_commands.py  test_config.py  test_contract.py  test_documentation.py  test_failures.py  test_human_output.py  test_input.py  test_materialize.py  test_provider_lifecycles.py  test_provider_text_lifecycle.py  test_registry_continuity.py  test_registry_durability.py  test_submit_text.py  test_text_lifecycle.py
tests/fixtures/: provider-text-bodies.json
tests/live/: README.md  test_provider_matrix.py
tests/providers/: test_adapters.py  test_anthropic_results.py  test_anthropic_streaming.py
tests/server/: test_poller.py  test_signing.py  test_transport.py
tests/stores/: test_stores.py
tools/: generate_cli_contract.py  verify_artifacts.py
(+119 files in other folders)
