[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[project]
name = "batchwork-ai"
version = "0.2.3"
description = "Unified async batch API for AI providers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ajanraj", email = "hey@ajanraj.com" }]
maintainers = [{ name = "Ajanraj", email = "hey@ajanraj.com" }]
keywords = ["ai", "anthropic", "batch", "gemini", "llm", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.4,<9",
  "httpcore>=1,<2",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
]

[project.scripts]
batchwork = "batchwork.cli:main"

[project.optional-dependencies]
redis = ["upstash-redis>=1.4,<2"]

[project.urls]
Documentation = "https://batchwork.ajanraj.com"
Issues = "https://github.com/ajanraj/batchwork-ai/issues"
Repository = "https://github.com/ajanraj/batchwork-ai"

[dependency-groups]
dev = [
  "jsonschema>=4.25,<5",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "twine>=6.1,<7",
  "ty==0.0.59",
]

[tool.uv.build-backend]
module-name = "batchwork"
module-root = "src"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: requires real provider credentials",
  "redis: requires Upstash Redis credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ty.src]
include = ["src"]
