[project]
name = "batchwork-hackathon-demo"
version = "0.1.0"
description = "Self-contained OpenAI Build Week judge demo for batchwork-ai"
requires-python = ">=3.11"
dependencies = ["batchwork-ai>=0.2.0"]

# Keep this demo isolated from the repository's own uv project.
[tool.uv.workspace]
members = []

